kubernetes/main/apps/blog/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog
  namespace: blog
  labels:
    app: blog
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blog
  template:
    metadata:
      labels:
        app: blog
    spec:
      nodeSelector:
        kubernetes.io/hostname: talos-worker-eu-02
      containers:
        - name: blog
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
            requests:
              memory: "64Mi"
              cpu: "250m"
          image: ghcr.io/cloudwithdan/blog:latest
          imagePullPolicy: Always
          ports:
            - name: blog
              containerPort: 8080
          livenessProbe:
            httpGet:
              path: /
              port: 8080
          readinessProbe:
            httpGet:
              path: /
              port: 8080
