kubernetes/main/apps/blog/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blog
  namespace: blog
spec:
  ports:
    - name: blog
      port: 8080
      targetPort: blog
  selector:
    app: blog
  type: ClusterIP
